--- a/css/style_default.css
+++ b/css/style_default.css
@@ -3,6 +3,13 @@ body
     background-color: #02467b;
 }
 
+h1
+{
+    text-align: center;
+    color: white;
+    line-height: 36px;
+}
+
 .recto, .verso
 {
     width: 275px;
