--- a/css/style_default.css
+++ b/css/style_default.css
@@ -1,13 +1,47 @@
-body
+#fond
 {
     background-color: #02467b;
+}
+
+nav
+{
+    background-color: gray;
+    background-image:linear-gradient(rgba(215, 215, 215, 1), rgba(135, 135, 135, 1));
+    border-radius: 15px 15px 15px 15px;
+}
+
+nav>a
+{
+    color: white;
+}
+
+#container
+{
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100vh;
+    width: 60%;
+    background-image:linear-gradient(rgba(2, 70, 123, 1), rgba(0, 212, 255, 1));
 }
 
 h1
 {
     text-align: center;
-    color: white;
     line-height: 36px;
+}
+
+#titre
+{
+    color: white;    
+}
+
+#index_img-1
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-position: center;
+    width: 75%;
 }
 
 .recto, .verso
